[gd_scene load_steps=17 format=3 uid="uid://cwmpl3bp3tpw6"]

[ext_resource type="Script" path="res://scripts/tutorial.gd" id="1_spaqk"]
[ext_resource type="Texture2D" uid="uid://dcs2e4iwrmot2" path="res://assets/images/sprites/keys/left_unpressed.png" id="2_ixyew"]
[ext_resource type="Texture2D" uid="uid://cx8vidxflarlk" path="res://assets/images/sprites/keys/left_pressed.png" id="3_nbkof"]
[ext_resource type="Texture2D" uid="uid://dq41lalewoxf" path="res://assets/images/sprites/keys/right_unpressed.png" id="4_ps1kv"]
[ext_resource type="Texture2D" uid="uid://h3y8mp50f2qj" path="res://assets/images/sprites/keys/right_pressed.png" id="5_jyeng"]
[ext_resource type="Theme" uid="uid://xerbaooedi4j" path="res://assets/themes/theme.tres" id="5_skig7"]
[ext_resource type="Texture2D" uid="uid://cbhvpwr34yx28" path="res://assets/images/sprites/keys/space_unpressed.png" id="6_e8fpw"]
[ext_resource type="PackedScene" uid="uid://bm1y41plkax3g" path="res://scenes/player.tscn" id="6_tf5wv"]
[ext_resource type="Texture2D" uid="uid://k6sdh8v850wr" path="res://assets/images/sprites/keys/space_pressed.png" id="7_1y5rj"]
[ext_resource type="Texture2D" uid="uid://3vrln6to1ovm" path="res://assets/images/sprites/keys/z_unpressed.png" id="8_1v428"]
[ext_resource type="Texture2D" uid="uid://clibnycpmqq8u" path="res://assets/images/sprites/keys/z_pressed.png" id="9_021fd"]
[ext_resource type="PackedScene" uid="uid://dmov21l3xumst" path="res://scenes/speaker.tscn" id="13_1v683"]
[ext_resource type="Texture2D" uid="uid://bubgiks84pajt" path="res://assets/images/sprites/tutorial_floor.png" id="13_akjpg"]
[ext_resource type="Texture2D" uid="uid://5xqphh1wuy0b" path="res://assets/images/sprites/tutorial_frame.png" id="14_id0ow"]
[ext_resource type="Texture2D" uid="uid://be280ontjer11" path="res://assets/images/sprites/tutorial_counter.png" id="15_0f518"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_054l4"]
size = Vector2(114.5, 4)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_spaqk")

[node name="UnpressedLeft" type="Sprite2D" parent="."]
position = Vector2(342, 214)
scale = Vector2(2, 2)
texture = ExtResource("2_ixyew")

[node name="PressedLeft" type="Sprite2D" parent="."]
visible = false
position = Vector2(342, 214)
scale = Vector2(2, 2)
texture = ExtResource("3_nbkof")

[node name="UnpresssedRight" type="Sprite2D" parent="."]
position = Vector2(554, 214)
scale = Vector2(2, 2)
texture = ExtResource("4_ps1kv")

[node name="PressedRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(554, 214)
scale = Vector2(2, 2)
texture = ExtResource("5_jyeng")

[node name="UnpressedSpace" type="Sprite2D" parent="."]
position = Vector2(448, 214)
scale = Vector2(2, 2)
texture = ExtResource("6_e8fpw")

[node name="PressedSpace" type="Sprite2D" parent="."]
visible = false
position = Vector2(448, 214)
scale = Vector2(2, 2)
texture = ExtResource("7_1y5rj")

[node name="UnpressedZ" type="Sprite2D" parent="."]
position = Vector2(370, 145)
scale = Vector2(2, 2)
texture = ExtResource("8_1v428")

[node name="PressedZ" type="Sprite2D" parent="."]
visible = false
position = Vector2(370, 145)
scale = Vector2(2, 2)
texture = ExtResource("9_021fd")

[node name="ContinuePrompt" type="RichTextLabel" parent="."]
visible = false
offset_left = 301.0
offset_top = 265.0
offset_right = 595.0
offset_bottom = 281.0
theme = ExtResource("5_skig7")
theme_override_colors/default_color = Color(0.388235, 0.313726, 0.564706, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[center]Press enter to continue"

[node name="Timer" type="Timer" parent="ContinuePrompt"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource("6_tf5wv")]
position = Vector2(216, 197)
scale = Vector2(3, 3)

[node name="Speaker" parent="." node_paths=PackedStringArray("player") instance=ExtResource("13_1v683")]
position = Vector2(100, 216.5)
scale = Vector2(3, 3)
player = NodePath("../Player")

[node name="Counter" type="Sprite2D" parent="."]
position = Vector2(100, 267.5)
scale = Vector2(3, 3)
texture = ExtResource("15_0f518")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(159, 297)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
texture = ExtResource("13_akjpg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0.25, 0)
shape = SubResource("RectangleShape2D_054l4")

[node name="Frame" type="StaticBody2D" parent="."]
position = Vector2(159, 176)
scale = Vector2(2, 2)

[node name="Sprite2D" type="Sprite2D" parent="Frame"]
texture = ExtResource("14_id0ow")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Frame"]
polygon = PackedVector2Array(-49, 58.5, -57, 58.5, -57, -56.5, -56, -56.5, -56, -57.5, -55, -57.5, -55, -58.5, 55, -58.5, 55, -57.5, 56, -57.5, 56, -56.5, 57, -56.5, 57, 58.5, 49, 58, 49, -55.5, -49, -55.5)

[connection signal="timeout" from="ContinuePrompt/Timer" to="." method="_on_timer_timeout"]
